2007-06-25  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Added MultipleColumnSpan* tests.

2007-06-24  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Added MinWidthMeasureConstraint test.

2007-06-24  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Added MinWidth, MaxWidth tests.

2007-06-24  George Giolfan  <georgegiolfan@yahoo.com>

	* RowDefinitionTest.cs: Added.
	* ColumnDefinitionTest.cs, GridTest.cs: Added tests.

2007-06-24  George Giolfan  <georgegiolfan@yahoo.com>

	* StackPanelTest.cs: Disabled a buggy test.
	
2007-06-24  George Giolfan  <georgegiolfan@yahoo.com>

	* ButtonTest.cs: Disabled a buggy test.

2007-06-22  George Giolfan  <georgegiolfan@yahoo.com>

	* ColumnDefinitionTest.cs: Added.

2007-06-22  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Added or expanded tests.

2007-06-22  George Giolfan  <georgegiolfan@yahoo.com>

	* ColumnDefinitionCollectionTest.cs: Added.

2007-06-22  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Added GridRow* tests.

2007-06-22  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Added or expanded tests.

2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Added ChangingDefinitionsCauseMeasure* tests.

2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Added WhereIsGridLinesRendererCreated* tests.

2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Expanded ShowGridLines test.

2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Added ShowGridLines test.

2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Added DefinitionOffset test.

2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Expanded GridPropertiesCauseLayoutChanges test.

2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>

	* GridTest.cs: Added StarSizing test.

2007-06-21  George Giolfan  <georgegiolfan@yahoo.com>
